@@ -732,6 +732,9 @@ Release 2.8.0 - UNRELEASED
     YARN-433. When RM is catching up with node updates then it should not expire
     acquired containers. (Xuan Gong via zxu)
 
+    YARN-3992. TestApplicationPriority.testApplicationPriorityAllocation fails 
+    intermittently. (Contributed by Sunil G)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
